--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tesis_ediesky",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore"
